--- a/M4/GestionDonnées/GestionDonnées_build_log.html
+++ b/M4/GestionDonnées/GestionDonnées_build_log.html
@@ -4,54 +4,131 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /></head>
 <body>
 <tt>
-Build started on: <u>16-11-2017 at 16:41.25</u><br />
-Build ended on: <u>16-11-2017 at 16:41.28</u><p />
-<b>-------------- Build: Release in GestionDonnées (compiler: GNU GCC Compiler)---------------</b><br />
-mingw32-gcc.exe -Wall -O2 -std=c99 -ansi -pg -g  -c "C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c" -o obj\Release\main.o<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\menu.c:1:0,<br />
-                 from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:3:<br />
-<font color="#0000ff">C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\menu.h:7:8: warning: extra tokens at end of #endif directive</font><br />
+Build started on: <u>17-11-2017 at 12:43.32</u><br />
+Build ended on: <u>17-11-2017 at 12:43.34</u><p />
+<b>-------------- Build: Debug in GestionDonnées (compiler: GNU GCC Compiler)---------------</b><br />
+mingw32-gcc.exe -Wall -g -std=c99 -ansi -pg -g  -c "D:\Projet C++\GestionDonnées\main.c" -o obj\Debug\main.o<br />
+In file included from D:\Projet C++\GestionDonnées\menu.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:3:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.h:7:8: warning: extra tokens at end of #endif directive</font><br />
  #endif // MENU_H_INCLUDED<br />
         ^<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:3:0:<br />
-C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\menu.c: In function 'choixDuMenu':<br />
-<font color="#0000ff">C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\menu.c:15:5: warning: implicit declaration of function 'ordreFichier' [-Wimplicit-function-declaration]</font><br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c: In function 'choixDuMenu':<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.c:16:5: warning: implicit declaration of function 'ordreFichier' [-Wimplicit-function-declaration]</font><br />
      case 1: ordreFichier();<br />
      ^<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.c:1:0,<br />
-                 from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:4:<br />
-C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.h: At top level:<br />
-<font color="#0000ff">C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.h:7:6: warning: conflicting types for 'ordreFichier'</font><br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.c:18:5: warning: implicit declaration of function 'ordreCroissant' [-Wimplicit-function-declaration]</font><br />
+     case 2:ordreCroissant();<br />
+     ^<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.c:20:5: warning: implicit declaration of function 'ordreDecroissant' [-Wimplicit-function-declaration]</font><br />
+     case 3:ordreDecroissant();<br />
+     ^<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.c:22:5: warning: implicit declaration of function 'rechercheTemps' [-Wimplicit-function-declaration]</font><br />
+     case 4:rechercheTemps();<br />
+     ^<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.c:24:5: warning: implicit declaration of function 'moyenne' [-Wimplicit-function-declaration]</font><br />
+     case 5:moyenne();<br />
+     ^<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.c:26:5: warning: implicit declaration of function 'nombreDeDonnees' [-Wimplicit-function-declaration]</font><br />
+     case 6:nombreDeDonnees();<br />
+     ^<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\menu.c:28:5: warning: implicit declaration of function 'extremum' [-Wimplicit-function-declaration]</font><br />
+     case 7:extremum();<br />
+     ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+D:\Projet C++\GestionDonnées\actions.h: At top level:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:8:6: warning: conflicting types for 'ordreFichier'</font><br />
  void ordreFichier();<br />
       ^<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:3:0:<br />
-C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\menu.c:15:13: note: previous implicit declaration of 'ordreFichier' was here<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c:16:13: note: previous implicit declaration of 'ordreFichier' was here<br />
      case 1: ordreFichier();<br />
              ^<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.c:1:0,<br />
-                 from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:4:<br />
-<font color="#0000ff">C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.h:15:8: warning: extra tokens at end of #endif directive</font><br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:9:6: warning: conflicting types for 'ordreCroissant'</font><br />
+ void ordreCroissant();<br />
+      ^<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c:18:12: note: previous implicit declaration of 'ordreCroissant' was here<br />
+     case 2:ordreCroissant();<br />
+            ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:10:6: warning: conflicting types for 'ordreDecroissant'</font><br />
+ void ordreDecroissant();<br />
+      ^<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c:20:12: note: previous implicit declaration of 'ordreDecroissant' was here<br />
+     case 3:ordreDecroissant();<br />
+            ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:11:6: warning: conflicting types for 'rechercheTemps'</font><br />
+ void rechercheTemps();<br />
+      ^<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c:22:12: note: previous implicit declaration of 'rechercheTemps' was here<br />
+     case 4:rechercheTemps();<br />
+            ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:12:6: warning: conflicting types for 'moyenne'</font><br />
+ void moyenne();<br />
+      ^<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c:24:12: note: previous implicit declaration of 'moyenne' was here<br />
+     case 5:moyenne();<br />
+            ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:13:6: warning: conflicting types for 'nombreDeDonnees'</font><br />
+ void nombreDeDonnees();<br />
+      ^<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c:26:12: note: previous implicit declaration of 'nombreDeDonnees' was here<br />
+     case 6:nombreDeDonnees();<br />
+            ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:14:6: warning: conflicting types for 'extremum'</font><br />
+ void extremum();<br />
+      ^<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:3:0:<br />
+D:\Projet C++\GestionDonnées\menu.c:28:12: note: previous implicit declaration of 'extremum' was here<br />
+     case 7:extremum();<br />
+            ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.h:21:8: warning: extra tokens at end of #endif directive</font><br />
  #endif // ACTIONS_H_INCLUDED<br />
         ^<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.c:2:0,<br />
-                 from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:4:<br />
-<font color="#0000ff">C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\donnees.h:17:8: warning: extra tokens at end of #endif directive</font><br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:2:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\donnees.h:4:0: warning: "TAILLE_MAX_LIGNE" redefined</font><br />
+ #define TAILLE_MAX_LIGNE 17<br />
+ ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:1:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+D:\Projet C++\GestionDonnées\actions.h:4:0: note: this is the location of the previous definition<br />
+ #define TAILLE_MAX_LIGNE<br />
+ ^<br />
+In file included from D:\Projet C++\GestionDonnées\actions.c:2:0,<br />
+                 from D:\Projet C++\GestionDonnées\main.c:4:<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\donnees.h:20:8: warning: extra tokens at end of #endif directive</font><br />
  #endif // DONNEES_H_INCLUDED<br />
         ^<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:4:0:<br />
-C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.c: In function 'ordreFichier':<br />
-<font color="#0000ff">C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\actions.c:15:9: warning: unused variable 'i' [-Wunused-variable]</font><br />
-     int i = 0;<br />
-         ^<br />
-In file included from C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\main.c:5:0:<br />
-C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\donnees.c: In function 'chargementDesDonnees':<br />
-<font color="#0000ff">C:\Users\Nicolas Drapier\Documents\GitHub\ExiaCardioFM\M4\GestionDonnées\donnees.c:8:23: warning: variable 'tableauDeDonnees' set but not used [-Wunused-but-set-variable]</font><br />
-     struct mesDonnees tableauDeDonnees[TAILLE_TABLEAU];<br />
-                       ^<br />
-mingw32-g++.exe  -o bin\Release\GestionDonnées.exe obj\Release\main.o  -s -pg -lgmon  <br />
-Output file is bin\Release\GestionDonnées.exe with size 36.50 KB<br />
+In file included from D:\Projet C++\GestionDonnées\main.c:4:0:<br />
+D:\Projet C++\GestionDonnées\actions.c: In function 'rechercheTemps':<br />
+<font color="#0000ff">D:\Projet C++\GestionDonnées\actions.c:62:13: warning: unused variable 'seconde' [-Wunused-variable]</font><br />
+     int i=0,seconde = 0;<br />
+             ^<br />
+mingw32-g++.exe  -o bin\Debug\GestionDonnées.exe obj\Debug\main.o  -pg -lgmon  <br />
+Output file is bin\Debug\GestionDonnées.exe with size 84.44 KB<br />
 <font color="#0000ff">Process terminated with status 0 (0 minute(s), 2 second(s))</font><br />
-<font color="#0000ff">0 error(s), 7 warning(s) (0 minute(s), 2 second(s))</font><br />
+<font color="#0000ff">0 error(s), 19 warning(s) (0 minute(s), 2 second(s))</font><br />
 </tt>
 </body>
 </html>
